--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -25,13 +25,14 @@ body {
 }
 
 .header {
+  font-size: larger;
   display: flex;
   background-color: #202567;
   justify-content: space-around;
+  align-items: center;
 }
 
 .left-header {
-  display: grid;
   justify-content: center;
   align-content: center;
 }
@@ -42,22 +43,30 @@ body {
   border-radius: 10px;
   padding: 5px;
   margin-top: 10px;
+  font-size:18px;
+}
+
+.btn:hover{
+  background-color: #b81d53;
 }
 
 .btn-header{
   width: 35%;
+  cursor: pointer;
 }
 
 .btn-middle{
   width: 250px;
   padding: 10px 40px;
+  cursor: pointer !important;
 }
 
 .middle{
+  font-size: larger;
   line-height: 1.6;
   text-align: right;
   margin-right: 40px;
-  height: 300px;
+  //height: 300px;
   align-content: center;
   justify-content: end;
   display: grid;
@@ -66,4 +75,37 @@ body {
 .p-header{
   line-height: 1.5;
   margin: 5px 0 20px 0;
+}
+
+a{
+  cursor: pointer;
+}
+
+.teste {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 20px;
+}
+
+img .pettie {
+  z-index: 10;
+  position: relative;
+  bottom: 320;
+}
+
+.container-fluid {
+  justify-content: flex-end;
+}
+
+.geral {
+  min-height: 100%;
+  position: relative;
+  width: 800px;
+}
+
+.footer {
+  width: 100%;
+  bottom: 0;
+  position: fixed;
 }
