--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,20 +1,6 @@
-@font-face{
-  font-family: "Assistant";
-  src: url('../fonts/Assistant/Assistant-Regular.ttf') format('ttf');
-}
-
-@font-face{
-  font-family: "Assistant-Bold";
-  src: url('../fonts/Assistant/Assistant-Bold.ttf') format('ttf');
-}
-
-@font-face{
-  font-family: "Assistant-Light";
-  src: url('../fonts/Assistant/Assistant-Light.ttf') format('ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&display=swap');
 
 html {
-  font-family: "Assistant", sans-serif;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
