addes sass loader - added color schema on tailwind

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
-// Colors
+@import './reset.scss';
 
 $primary-color: #4B6CC0;
-$secondary-color: #A85EE2;
+$secondary-color: hsl(274, 69%, 63%);
 $success: #41BF4A;
 $danger: #E94A47;
 $warning: #EBDB4D;
