--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -7,4 +7,6 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
 }
+
